Initial AwakenOS bringup
Signed-off-by: BladeRunner-A2C <prisoner56898@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Cosmic-OS</title>
+	<title>Project Awaken</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="A Secure, Stable and Feature rich Android Experience. #ExploreTheCosmos" />
-	<meta name="keywords" content="Cosmic OS" />
-	<meta name="author" content="Sid-Sun" />
+	<meta name="description" content="Born different, now awaken. #StayAwakened" />
+	<meta name="keywords" content="Project Awaken" />
+	<meta name="author" content="007 " />
 	<!-- Apple iOS Safari specific config -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -54,7 +54,7 @@
 					<a href="#" class="js-inf-nav-toggle inf-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 					<div style="max-height:50px">
 						<img style="float:left; margin-top:0.3em; margin-right: 0.5em;" src="images/favicon.png" width=50px height=50px />
-						<a class="navbar-brand" href="index.html">Cosmic-OS</a>
+						<a class="navbar-brand" href="index.html">Project Awaken</a>
 					</div>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
@@ -62,7 +62,6 @@
 						<li><a href="#" data-nav-section="home"><span>Home</span></a></li>
 						<li><a href="#" data-nav-section="about"><span>About</span></a></li>
 						<li><a href="#" data-nav-section="team"><span>Team</span></a></li>
-						<li><a href="#" data-nav-section="contributors"><span>Contributors</span></a></li>
 						<li><a href="#" data-nav-section="download"><span>Downloads</span></a></li>
 						<li><a href="#" data-nav-section="bugs"><span>Report Bugs</span></a></li>
 						<li><a href="#" data-nav-section="support"><span>Support Us</span></a></li>
@@ -78,9 +77,9 @@
 		<div class="container">
 			<div class="row" id="about-us">
 				<div class="col-md-12 jumbo-style text-center">
-					<h2 class="to-animate">Hello,</h2>
-					<h3 class="to-animate" style="padding-bottom: 1.25%">Experience Cosmic-OS; a Secure, Stable and Feature rich Android Experience.</h3>
-					<a class="btn btn-primary btn-lg to-animate" href="devices.html" role="button">Explore The Cosmos</a>
+					<h2 class="to-animate">Hello there,</h2>
+					<h3 class="to-animate" style="padding-bottom: 1.25%">Experience Awaken OS; a Secure, Stable and Feature rich Android Experience</h3>
+					<a class="btn btn-primary btn-lg to-animate" href="devices.html" role="button">Let's not fall asleep</a>
 				</div>
 			</div>
 		</div>
@@ -93,8 +92,8 @@
 					<h2 class="to-animate">About Us</h2>
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 to-animate">
-							<h3>We're a small team dedicated to provide you with a Secure, Stable and Feature rich Android Experience.</h3>
-							<h3>Powered by Android&trade; 8.1 Oreo.</h3>
+							<h3>Awaken OS brings consistent, fluent and smooth experience with all your must-have customizations, for you, for the community, for everyone.</h3>
+							<h3>Powered by Android&trade; 12.1 SnowCone.</h3>
 						</div>
 					</div>
 				</div>
@@ -107,129 +106,44 @@
 			<div class="row" id="about-us">
 				<div class="col-md-12 section-heading text-center">
 					<h2 class="to-animate">Meet the team</h2>
-					<h3 class="to-animate">The team behind Cosmic-OS</h3>
+					<h3 class="to-animate">The team behind Project Awaken</h3>
 					<div class="row"></div>
 				</div>
 				<div class="col-md-4 text-center to-animate">
 					<div class="person">
-						<img src="https://avatars2.githubusercontent.com/u/19348217?s=400&v=4" class="img-responsive img-rounded" alt="Person">
-						<h3 class="name">Sagar Shah</h3>
+						<img src="https://avatars.githubusercontent.com/u/41445556?s=400&v=4" class="img-responsive img-rounded" alt="Saikiran">
+						<h3 class="name">Saikiran</h3>
 						<div class="position">Lead Developer</div>
-						<p>Lead Developer and Founder, a student.</p>
+						<p>Lead Developer and Founder.</p>
 						<ul class="social social-circle">
-							<li><a href="https://GitHub.com/SagarShah1729"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:sagarshah@aimrom.com"><i class="icon-envelope"></i></a></li>
+							<li><a href="https://github.com/saikiran2001"><i class="icon-code"></i></a></li>
+							<li><a href="#"><i class="icon-envelope"></i></a></li>
 							<li><a href="#"><i class="icon-user"></i></a></li>
-							<li><a href="https://forum.xda-developers.com/member.php?u=5863325"><i class="icon-google-plus"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-4 text-center to-animate">
 					<div class="person">
-						<img src="https://avatars3.githubusercontent.com/u/22845347?s=400&u=22d4a3de79a1f07438aab3b19c921709826cb7fb&v=4" class="img-responsive img-rounded" alt="Star of the Cosmos">
-						<h3 class="name">Sid Sun</h3>
-						<div class="position">Web Developer</div>
-						<p>You can't be enlightened if you're the brightest.</p>
+						<img src="https://avatars.githubusercontent.com/u/18658422?v=4" class="img-responsive img-rounded" alt="REIGNZ">
+						<h3 class="name">Ninad Patil</h3>
+						<div class="position">Lead Developer</div>
+						<p></p>
 						<ul class="social social-circle">
-							<li><a href="https://www.GitHub.com/Sid-Sun"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:sidharth.soni525@gmail.com"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://t.me/SidSun"><i class="icon-user"></i></a></li>
-							<li><a href="https://plus.google.com/+SidharthS53"><i class="icon-google-plus"></i></a></li>
-							<li><a href="https://twitter.com/SidharthS525"><i class="icon-twitter"></i></a>
+							<li><a href="https://github.com/PainKiller3"><i class="icon-code"></i></a></li>
+							<li><a href="# "><i class="icon-envelope"></i></a></li>
+							<li><a href="https://t.me/Reignz3"><i class="icon-user"></i></a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-4 text-center to-animate">
 					<div class="person">
-						<img src="https://avatars3.githubusercontent.com/u/23108389?s=400&v=4" class="img-responsive img-rounded" alt="Sebastian">
-						<h3 class="name">Sebastian</h3>
-						<div class="position">Developer</div>
-						<p>Third resident of the Cosmos.</p>
-						<ul class="social social-circle">
-							<li><a href="https://github.com/Felvesthe"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:xdzienny@gmail.com"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://forum.xda-developers.com/member.php?u=7273765"><i class="icon-user"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-7 text-center to-animate">
-					<div class="person">
-						<img src="https://avatars2.githubusercontent.com/u/25141462?s=400&v=4" class="img-responsive img-rounded" alt="Zeromod">
-						<h3 class="name">Parthasarathy</h3>
-						<div class="position">Android Developer</div>
-						<p>Every action has a reaction.</p>
-						<ul class="social social-circle">
-							<li><a href="https://github.com/zeromod"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:zeromoddev@gmail.com"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://plus.google.com/u/0/111730393439671490868"><i class="icon-google-plus"></i></a></li>
-							<li><a href="https://www.facebook.com/imsarathy"><i class="icon-facebook"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-4 text-center to-animate">
-					<div class="person">
-						<img src="https://avatars3.githubusercontent.com/u/20582840?s=400&v=4" class="img-responsive img-rounded" alt="Josh">
-						<h3 class="name">Joshua Baldassarre</h3>
+						<img src="https://avatars.githubusercontent.com/u/21334079?s=400&v=4" class="img-responsive img-rounded" alt="Shen">
+						<h3 class="name">Wenlin Shen</h3>
 						<div class="position">Graphics Designer</div>
-						<p>Vague description of self.</p>
+						<p></p>
 						<ul class="social social-circle">
-							<li><a href="https://www.telegram.me/josh_b"><i class="icon-user"></i></a></li>
-							<li><a href="https://www.instagram.com/design_the_line/"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Contributors -->
-	<div id="inf-about-us" data-section="contributors">
-		<div class="container">
-			<div class="row" id="about-us">
-				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Contributors</h2>
-					<h3 class="to-animate">We love to work with the Android Community to bring to you a Feature Rich experience.</h3>
-				</div>
-				<div class="col-md-4 text-center to-animate">
-					<div class="person">
-						<img src="https://avatars0.githubusercontent.com/u/18647641?s=400&v=4" class="img-responsive img-rounded" alt="Fabulous-Image">
-						<h3 class="name">Agent Fabulous</h3>
-						<div class="position">Recognized Dank Contributor</div>
-						<p>&mdash; Stay Fabulous &mdash;</p>
-						<p>Owner of <a href="https://github.com/Fabulous-Oreo">Fabulous&dash;Oreo</a> Project.</p>
-						<ul class="social social-circle">
-							<li><a href="https://github.com/agentfabulous"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:kshitijgm@gmail.com"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://forum.xda-developers.com/member.php?u=5834335"><i class="icon-user"></i></a></li>
-							<li><a href="https://instagram.com/agent_fabulous"><i class="icon-instagram"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-4 text-center to-animate">
-					<div class="person">
-						<img src="https://avatars2.githubusercontent.com/u/11267344?s=400&v=4" class="img-responsive img-rounded" alt="Mortiest Rick">
-						<h3 class="name">Shubham Singh</h3>
-						<div class="position">Recognized Contributor</div>
-						<p>&mdash; Mortiest Rick &mdash;</p>
-						<p><a href="https://www.aospextended.com/">AEX</a>'s Lead Developer.</p>
-						<ul class="social social-circle">
-							<li><a href="https://github.com/ishubhamsingh"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:coolsks94@gmail.com"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://forum.xda-developers.com/member.php?u=5566914"><i class="icon-user"></i></a></li>
-							<li><a href="https://plus.google.com/u/0/+shubhamsingh"><i class="icon-google-plus"></i></a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-4 text-center to-animate">
-					<div class="person">
-						<img src="https://avatars3.githubusercontent.com/u/28104181?s=400&u=4e0ab9143b8795c7634296fd0ac7212500c518b2&v=4" class="img-responsive img-rounded" alt="Mortiest Rick">
-						<h3 class="name">jackcicci</h3>
-						<div class="position">Co-Web Developer</div>
-						<p>&nbsp;</p>
-						<p>Cosmic Animal</p>
-						<ul class="social social-circle">
-							<li><a href="https://github.com/jackcicci"><i class="icon-code"></i></a></li>
-							<li><a href="mailto:jackcicci@hotmail.it"><i class="icon-envelope"></i></a></li>
-							<li><a href="https://forum.xda-developers.com/member.php?u=5945246"><i class="icon-user"></i></a></li>
+							<li><a href="https://github.com/hugwalk"><i class="icon-code"></i></a></li>
+							<li><a href="https://t.me/hugwalk"><i class="icon-user"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -244,7 +158,7 @@
 					<h2 class="to-animate">Download</h2>
 					<div class="row"></div>
 					<div class="col-md-8 col-md-offset-2 to-animate">
-						<h3>Download Cosmic-OS for your device now.</h3>
+						<h3>Download Awaken OS for your device now.</h3>
 					</div>
 				</div>
 				<div class="col-md-12 text-center to-animate">
@@ -266,7 +180,7 @@
 					<div class="row"></div>
 					<div class="col-md-8 col-md-offset-2 to-animate">
 						<h3> Did you find a bug? </h3>
-						<h3>We're very sad to know that, please report it in our <a href="https://telegram.me/cosmicosofficial">Telegram Group</a> so we can resolve it as soon as possible.</h3>
+						<h3>We're very sad to know that, please report it in our <a href="https://t.me/AwakenOSChat">Telegram Group</a> so we can resolve it as soon as possible.</h3>
 						<div class="col-md-12 text-center to-animate">
 							<h4> To report bug, copy the following, edit it accordingly and send it to us.</h4>
 						</div>
@@ -275,7 +189,7 @@
 							<h4> Device: (Device)</h4>
 							<h4> Installation Details (ROM+Gapps+Addons): (Install Details)</h4>
 							<h4> Problem: (Details)</h4>
-							<h4> Logs (if any): (link to hastebin of log)</h4>
+							<h4> Logs (if any): (link of log)</h4>
 						</div>
 					</div>
 				</div>
@@ -297,7 +211,7 @@
 					<div class="person">
 						<h3 class="name">PayPal</h3>
 						<ul class="social social-circle">
-							<li><a href="https://PayPal.me/CosmicOS"><i class="icon-paypal"></i></a></li>
+							<li><a href="#"><i class="icon-paypal"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -305,7 +219,7 @@
 					<div class="person">
 						<h3 class="name">PayTM</h3>
 						<ul class="social social-circle">
-							<li><a href="https://m.imgur.com/a/jbQYS"><i class="icon-rupee"></i></a></li>
+							<li><a href="#"><i class="icon-rupee"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -317,16 +231,16 @@
 		<div class="container">
 			<div class="row row-bottom-padded-sm">
 				<div class="col-md-12">
-					<p class="copyright text-center">&mdash; Copyright &copy; 2018 The Cosmic-OS Project. All Rights Reserved. &mdash;</p>
+					<p class="copyright text-center">&mdash; Copyright &copy; 2022 The Awaken Project. &mdash;</p>
+					<p class="copyright text-center">&mdash; <a href="p.html">All Rights Reserved. </a> &mdash;</p>
 					<p class="copyright text-center">&mdash; <a href="p.html">Privacy Policy </a> &mdash;</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<ul class="social social-circle">
-						<li><a href="https://www.GitHub.com/Cosmic-OS"><i class="icon-code"></i></a></li>
-						<li><a href="https://plus.google.com/communities/116339021564888810193"><i class="icon-google-plus"></i></a></li>
-						<li><a href="https://telegram.me/cosmicosofficial"><i class="icon-group"></i></a></li>
+						<li><a href="https://github.com/Project-Awaken"><i class="icon-code"></i></a></li>
+						<li><a href="https://t.me/AwakenOSChat"><i class="icon-group"></i></a></li>
 					</ul>
 				</div>
 			</div>
